--- a/App/QuakeScope/app/src/main/res/values-es/strings.xml
+++ b/App/QuakeScope/app/src/main/res/values-es/strings.xml
@@ -16,11 +16,11 @@
     <string name="magnitude_value">Magnitud: %1$.1f</string>
     <string name="depth_value">Profundidad: %1$.1f km</string>
     <string name="location_value">Ubicación: (%1$.2f, %2$.2f)</string>
-    <string name="time_value">Hora: %1</string>
+    <string name="time_value">Hora: %1$s</string>
     <string name="magnitude_chip">Mag %1$.1f</string>
     <string name="depth_chip">Prof. %1$.0f km</string>
     <string name="location_chip">Lat %1$.2f, Lon %2$.2f</string>
-    <string name="time_chip">%1</string>
+    <string name="time_chip">%1$s</string>
     <string name="paired_badge">Pareado</string>
     <string name="selected_badge">Seleccionado</string>
     <string name="map_legend_title">Referencia del mapa</string>
@@ -56,7 +56,7 @@
     <string name="sort_depth_desc">Más profunda primero</string>
     <string name="sort_depth_asc">Menos profunda primero</string>
     <string name="limit_label">Limitar resultados</string>
-    <string name="limit_option">Mostrar %1 pares</string>
+    <string name="limit_option">Mostrar %1$d pares</string>
     <string name="save_filters">Guardar filtros</string>
     <string name="refresh_now">Actualizar ahora</string>
     <string name="earthquake_type">Tipo de terremoto</string>
@@ -82,4 +82,26 @@
     <string name="sort_estimated_magnitude_asc">Estimado: menor magnitud</string>
     <string name="sort_estimated_depth_desc">Estimado: más profunda primero</string>
     <string name="sort_estimated_depth_asc">Estimado: menos profunda primero</string>
+    <string name="notification_channel_name">Alertas de terremotos</string>
+    <string name="notification_channel_description">Notificaciones sobre terremotos detectados o estimados cerca de ti.</string>
+    <string name="notification_default_title">Alerta de terremoto</string>
+    <string name="notification_default_body">Mantente alerta. Revisa los detalles en la aplicación.</string>
+    <string name="settings_alert_preferences_title">Preferencias de alerta</string>
+    <string name="settings_alert_preferences_description">Controla qué terremotos activan las notificaciones.</string>
+    <string name="settings_alert_radius_label">Radio de alerta</string>
+    <string name="settings_alert_radius_value">Dentro de %1$.0f km</string>
+    <string name="settings_alert_magnitude_label">Magnitud mínima</string>
+    <string name="settings_alert_magnitude_value">Magnitud %1$.1f+</string>
+    <string name="settings_alert_location_title">Ubicación actual</string>
+    <string name="settings_alert_location_status_unknown">Ubicación no establecida</string>
+    <string name="settings_alert_location_status_value">Lat %1$.3f, Lon %2$.3f</string>
+    <string name="settings_alert_location_action">Usar ubicación actual</string>
+    <string name="settings_alert_location_fetching">Actualizando ubicación…</string>
+    <string name="settings_alert_location_permission_denied">Se necesita el permiso de ubicación para configurar notificaciones cercanas.</string>
+    <string name="settings_alert_location_updated">Ubicación actualizada</string>
+    <string name="settings_alert_location_failed">No se pudo obtener la ubicación actual</string>
+    <string name="settings_alert_save_button">Guardar preferencias de alerta</string>
+    <string name="settings_alert_saving">Guardando…</string>
+    <string name="settings_alert_save_success">Preferencias de alerta actualizadas</string>
+    <string name="settings_alert_save_error">No se pudieron guardar las preferencias</string>
 </resources>
