Added wiki. Filter button crashes app

--- a/App/QuakeScope/app/src/main/res/values-es/strings.xml
+++ b/App/QuakeScope/app/src/main/res/values-es/strings.xml
@@ -1,11 +1,12 @@
-﻿<resources>
+<resources>
     <string name="app_name">QuakeScope</string>
     <string name="title_home">Inicio</string>
     <string name="title_dashboard">Panel</string>
     <string name="title_notifications">Notificaciones</string>
     <string name="map">Mapa</string>
     <string name="list">Lista</string>
-    <string name="wiki">Wiki</string>
+    <string name="wiki">Aprender</string>
+    <string name="learn">Aprender</string>
     <string name="settings">Ajustes</string>
     <string name="filter">Filtrar</string>
     <string name="magnitude">Magnitud</string>
@@ -104,4 +105,54 @@
     <string name="settings_alert_saving">Guardando…</string>
     <string name="settings_alert_save_success">Preferencias de alerta actualizadas</string>
     <string name="settings_alert_save_error">No se pudieron guardar las preferencias</string>
+    <string name="wiki_header_title">Centro de preparación sísmica</string>
+    <string name="wiki_header_subtitle">Comprende la ciencia, mantente listo y sabe qué hacer antes, durante y después de un sismo.</string>
+    <string name="wiki_call_to_action">Elige un tema en el menú lateral o despliega las tarjetas para ver listas y recordatorios sencillos.</string>
+    <string name="wiki_toggle_menu">Mostrar u ocultar temas</string>
+    <string name="wiki_show_menu">Mostrar temas</string>
+    <string name="wiki_hide_menu">Ocultar temas</string>
+    <string name="wiki_section_basics_title">Sismos 101</string>
+    <string name="wiki_section_basics_summary">Aprende cómo se originan los sismos, la diferencia entre magnitud e intensidad y qué señales debes vigilar.</string>
+    <string name="wiki_section_before_title">Antes de un sismo</string>
+    <string name="wiki_section_before_summary">Prepara tu hogar, a tu familia y tu kit de emergencia con anticipación.</string>
+    <string name="wiki_section_during_title">Durante el sismo</string>
+    <string name="wiki_section_during_summary">Agáchate, cúbrete y sujétate, con consejos para situaciones especiales dentro o fuera de casa.</string>
+    <string name="wiki_section_after_title">Después del movimiento</string>
+    <string name="wiki_section_after_summary">Mantén la seguridad, atiende lesiones y reencuéntrate con tus seres queridos.</string>
+    <string name="wiki_section_kit_title">Esenciales para el kit</string>
+    <string name="wiki_section_kit_summary">Usa esta lista para mantenerte cómodo al menos 72 horas si los servicios se interrumpen.</string>
+    <string name="wiki_basics_sub_origin_title">Cómo se originan los sismos</string>
+    <string name="wiki_basics_sub_origin_body">La tensión se acumula en las fallas hasta que las rocas se deslizan de forma repentina. La energía liberada viaja como ondas sísmicas.</string>
+    <string name="wiki_basics_sub_scale_title">Magnitud vs. intensidad</string>
+    <string name="wiki_basics_sub_scale_body">La magnitud mide la energía total, mientras que la intensidad describe la sacudida y el daño en cada lugar. Ambas son clave para evaluar el riesgo.</string>
+    <string name="wiki_basics_sub_signals_title">Alertas y señales tempranas</string>
+    <string name="wiki_basics_sub_signals_body">La tecnología puede darte segundos de ventaja. Mantente conectado a alertas oficiales para actuar con rapidez.</string>
+    <string name="wiki_before_sub_home_title">Asegura tu espacio</string>
+    <string name="wiki_before_sub_home_body">Pequeños ajustes en casa reducen mucho el riesgo. Enfócate en muebles pesados, servicios y zonas seguras en cada habitación.</string>
+    <string name="wiki_before_sub_plan_title">Haz un plan familiar</string>
+    <string name="wiki_before_sub_plan_body">Todos en casa deben saber cómo comunicarse, dónde reunirse y a quién pedir ayuda.</string>
+    <string name="wiki_before_sub_drills_title">Practica e infórmate</string>
+    <string name="wiki_before_sub_drills_body">Los simulacros crean memoria muscular y las alertas confiables te mantienen al tanto de cualquier cambio.</string>
+    <string name="wiki_during_sub_indoor_title">Si estás dentro de casa</string>
+    <string name="wiki_during_sub_indoor_body">La mayoría de lesiones se debe a objetos que caen. Agáchate, protege tu cabeza y permanece en tu sitio hasta que termine.</string>
+    <string name="wiki_during_sub_outdoor_title">Si estás fuera o conduciendo</string>
+    <string name="wiki_during_sub_outdoor_body">Aléjate de peligros, detente en un área libre y permanece alerta ante caída de objetos o daños en la infraestructura.</string>
+    <string name="wiki_during_sub_special_title">Situaciones especiales</string>
+    <string name="wiki_during_sub_special_body">Si necesitas apoyo o usas ayudas de movilidad, adapta la secuencia Agáchate, Cúbrete, Sujétate para que funcione contigo.</string>
+    <string name="wiki_after_sub_check_title">Revisa peligros inmediatos</string>
+    <string name="wiki_after_sub_check_body">Busca daños estructurales, fugas de gas y otros riesgos antes de moverte. Prepárate para las réplicas.</string>
+    <string name="wiki_after_sub_help_title">Cuida a personas y mascotas</string>
+    <string name="wiki_after_sub_help_body">Brinda primeros auxilios, calma a niñas y niños y mantén a las mascotas cerca con correa o transportadora.</string>
+    <string name="wiki_after_sub_stayinformed_title">Mantente informado</string>
+    <string name="wiki_after_sub_stayinformed_body">Usa radio, aplicaciones oficiales o mensajes de texto para recibir noticias sobre refugios, servicios y apoyo.</string>
+    <string name="wiki_kit_sub_basic_title">Suministros básicos</string>
+    <string name="wiki_kit_sub_basic_body">Forma un kit que cubra agua, comida, higiene y comodidad básica por varios días.</string>
+    <string name="wiki_kit_sub_docs_title">Documentos y herramientas</string>
+    <string name="wiki_kit_sub_docs_body">Copias de identificaciones, pólizas y herramientas básicas agilizan la recuperación.</string>
+    <string name="wiki_kit_sub_maintenance_title">Manténlo listo</string>
+    <string name="wiki_kit_sub_maintenance_body">Revisa fechas de caducidad y necesidades por temporada para que el kit siempre coincida con tu realidad.</string>
+    <string name="wiki_footer_resources_title">Más recursos confiables</string>
+    <string name="wiki_resource_ready_label">Ready.gov Terremotos</string>
+    <string name="wiki_resource_usgs_label">USGS Sismos recientes</string>
+    <string name="wiki_resource_redcross_label">Consejos de la Cruz Roja</string>
 </resources>
