--- a/App/QuakeScope/app/src/main/res/values/strings.xml
+++ b/App/QuakeScope/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="title_notifications">Notifications</string>
     <string name="map">Map</string>
     <string name="list">List</string>
-    <string name="wiki">Wiki</string>
+    <string name="wiki">Learn</string>
+    <string name="learn">Learn</string>
     <string name="settings">Settings</string>
     <string name="filter">Filter</string>
     <string name="magnitude">Magnitude</string>
@@ -105,4 +106,54 @@
     <string name="settings_alert_saving">Saving...</string>
     <string name="settings_alert_save_success">Alert preferences updated</string>
     <string name="settings_alert_save_error">Could not save preferences</string>
+    <string name="wiki_header_title">Earthquake preparedness hub</string>
+    <string name="wiki_header_subtitle">Understand the science, stay ready, and know what to do before, during, and after a quake.</string>
+    <string name="wiki_call_to_action">Choose a topic from the side menu or expand the cards below for friendly checklists and reminders.</string>
+    <string name="wiki_toggle_menu">Toggle topics menu</string>
+    <string name="wiki_show_menu">Show topics</string>
+    <string name="wiki_hide_menu">Hide topics</string>
+    <string name="wiki_section_basics_title">Earthquake 101</string>
+    <string name="wiki_section_basics_summary">Learn how earthquakes start, how magnitude and intensity differ, and what warning signs to watch for.</string>
+    <string name="wiki_section_before_title">Before a quake</string>
+    <string name="wiki_section_before_summary">Get your home, family, and emergency kit ready ahead of time.</string>
+    <string name="wiki_section_during_title">During a quake</string>
+    <string name="wiki_section_during_summary">Drop, Cover, and Hold On—plus tips for special situations indoors or outside.</string>
+    <string name="wiki_section_after_title">After the shaking</string>
+    <string name="wiki_section_after_summary">Stay safe, check for injuries, and reconnect with loved ones.</string>
+    <string name="wiki_section_kit_title">Emergency kit essentials</string>
+    <string name="wiki_section_kit_summary">Use this checklist to stay comfortable for at least 72 hours if services are disrupted.</string>
+    <string name="wiki_basics_sub_origin_title">How earthquakes start</string>
+    <string name="wiki_basics_sub_origin_body">Stress builds along faults until rocks suddenly slip. The energy that is released travels outward as seismic waves.</string>
+    <string name="wiki_basics_sub_scale_title">Magnitude vs. intensity</string>
+    <string name="wiki_basics_sub_scale_body">Magnitude measures total energy, while intensity describes local shaking and damage. Both matter when you gauge your risk.</string>
+    <string name="wiki_basics_sub_signals_title">Early signals &amp; alerts</string>
+    <string name="wiki_basics_sub_signals_body">Technology may give a few seconds of warning. Staying connected to official alerts helps you act quickly.</string>
+    <string name="wiki_before_sub_home_title">Secure your space</string>
+    <string name="wiki_before_sub_home_body">Small changes at home greatly reduce risk. Focus on heavy furniture, utilities, and safe spots in every room.</string>
+    <string name="wiki_before_sub_plan_title">Make a family plan</string>
+    <string name="wiki_before_sub_plan_body">Everyone in your household should know how to reach one another, where to meet, and who to call for help.</string>
+    <string name="wiki_before_sub_drills_title">Practice &amp; stay informed</string>
+    <string name="wiki_before_sub_drills_body">Regular drills build muscle memory, and trusted alerts keep you aware of changing conditions.</string>
+    <string name="wiki_during_sub_indoor_title">If you are indoors</string>
+    <string name="wiki_during_sub_indoor_body">Most injuries indoors are from falling objects. Drop to the ground, protect your head, and stay put until the shaking stops.</string>
+    <string name="wiki_during_sub_outdoor_title">If you are outside or driving</string>
+    <string name="wiki_during_sub_outdoor_body">Move away from hazards, stop in a clear area, and stay alert for falling debris or broken infrastructure.</string>
+    <string name="wiki_during_sub_special_title">Special situations</string>
+    <string name="wiki_during_sub_special_body">If you need assistance or use mobility aids, adapt the Drop, Cover, Hold sequence so it works for you.</string>
+    <string name="wiki_after_sub_check_title">Check for immediate dangers</string>
+    <string name="wiki_after_sub_check_body">Look for structural damage, gas leaks, and other hazards before moving around. Stay prepared for aftershocks.</string>
+    <string name="wiki_after_sub_help_title">Care for people and pets</string>
+    <string name="wiki_after_sub_help_body">Give first aid, comfort children, and keep pets close on a leash or carrier until the environment is stable.</string>
+    <string name="wiki_after_sub_stayinformed_title">Stay informed</string>
+    <string name="wiki_after_sub_stayinformed_body">Use radio, official apps, or text messages to get updates on shelters, utilities, and recovery support.</string>
+    <string name="wiki_kit_sub_basic_title">Core supplies</string>
+    <string name="wiki_kit_sub_basic_body">Build a kit that covers water, food, sanitation, and basic comfort for several days.</string>
+    <string name="wiki_kit_sub_docs_title">Documents &amp; tools</string>
+    <string name="wiki_kit_sub_docs_body">Copies of IDs, insurance, and basic tools make recovery faster and less stressful.</string>
+    <string name="wiki_kit_sub_maintenance_title">Keep it ready</string>
+    <string name="wiki_kit_sub_maintenance_body">Review expiration dates and seasonal needs so your kit always matches your reality.</string>
+    <string name="wiki_footer_resources_title">More trusted resources</string>
+    <string name="wiki_resource_ready_label">Ready.gov Earthquakes</string>
+    <string name="wiki_resource_usgs_label">USGS Latest Earthquakes</string>
+    <string name="wiki_resource_redcross_label">Red Cross Safety Tips</string>
 </resources>
